# semantic_caching_challange

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  service.py
config/: config.py
dockerfiles/ollama/: Dockerfile  pull-llama3.sh
models/: base_cache.py  llm_model.py  semantic_cache.py  storage_model.py
notebooks/: eval.ipynb
utils/: eval_utils.py  faq_data_container.py  model_costs.json  utils.py
